# applenotes-to-markdown

./: .gitignore  README.md  inspiration.md  pyproject.toml
notes_sync/: __init__.py  __main__.py  cli.py  config.py  convert.py  jxa.py  state.py  sync.py
tests/: test_config.py  test_convert.py  test_state.py
