[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notes-sync"
version = "0.1.0"
description = "Sync Apple Notes to Markdown files on disk"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hants Williams" }]
keywords = ["apple-notes", "markdown", "sync", "cli", "macos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = [
    "html2text>=2024.2.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
notes-sync = "notes_sync.cli:main"

[project.urls]
Homepage = "https://github.com/hantsawilliams/applenotes-to-markdown"
Issues = "https://github.com/hantsawilliams/applenotes-to-markdown/issues"

[tool.hatch.build.targets.wheel]
packages = ["notes_sync"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
